--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
                 <button class="button num">7</button>
                 <button class="button num">8</button>
                 <button class="button num">9</button>
-                <button class="button opera">&#120;</button>
+                <button class="button opera">x</button>
             </section>
             <section class="row">
                 <button class="button num">4</button>
                 <button class="button num">5</button>
                 <button class="button num">6</button>
-                <button class="button opera">&#45;</button>
+                <button class="button opera">-</button>
             </section>
             <section class="row">
                 <button class="button num">1</button>
                 <button class="button num">2</button>
                 <button class="button num">3</button>
-                <button class="button opera">&plus;</button>
+                <button class="button opera">+</button>
             </section>
             <section class="row">
                 <button class="button num">0</button>
