added single decimal rounding, no dividing with zero, removed some comments and console.log

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             
             <section class="row">
                 <button class="button clear">AC</button>
-                <button class="button">e</button>
-                <button class="button">e</button>
+                <button class="button" disabled>e</button>
+                <button class="button" disabled>e</button>
                 <button class="button opera">&divide;</button>
             </section>
             <section class="row">
@@ -45,8 +45,8 @@
             </section>
             <section class="row">
                 <button class="button num">0</button>
-                <button class="button">e</button>
-                <button class="button">.</button>
+                <button class="button" disabled>e</button>
+                <button class="button" disabled>.</button>
                 <button class="button equal">&equals;</button>
             </section>
             
